[package]
name = "darknet"
version = "0.1.0"
authors = ["mposmta <postma.marin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

bindgen = "0.51.1"
cc = "1.0.47"

[dev-dependencies]
procinfo = "0.4.2"
tempfile = "3.1.0"

[dependencies]
libc = "0.2"
